fix overflow
changed draw grid function as flex wrap turned
out to be lacking.

--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,12 @@ body {
 #container {
     margin-top: 50px;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;
     justify-content: center;
+    align-items: center;
     width: 480px;
     height: 480px;
     border: solid 2px;
     background-color: rgb(0, 0, 0);
-    
 }
 
 button {
@@ -29,8 +27,6 @@ h1 {
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 50px;
 }
-
-
 
 
 
